frontend/src/components/Navigation/Navigation.css
.logo {
    width: auto;
    height: 32px;
}

header {
    border-bottom: 1px solid #DDD;
    position: sticky;
    z-index: 100;
    top: 0;
    background-color: #FFF;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    list-style: none;
    padding: 20px 80px 18px;
    width: 100vw;
    max-width: 1600px;
}

#page-content {
    padding: 5px 80px 20px;
    width: 100vw;
    max-width: 1600px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

footer {
    border-top: 1px solid #DDD;
    background-color: #FFF;
    position: sticky;
    bottom: 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 13.5px 80px;
    width: 100%;
    font-size: .85rem;
}

.footer-links {
    margin: 0px 20px;
}

.fa-linkedin {
    color: #0077B5;
}

.fa-github {
    color: #171515;
}

.navbar--right {
    display: flex;
}

.navbar--middle {
    margin-left: 147px;
    font-size: 1.5rem;
    font-weight: 400;
}

.link--create-spot {
    margin-right: 47px;
}

/*****************************************************************************/
/* STYLES FOR PROFILE BUTTON */

.button--profile {
    width: 77px;
    height: 42px;
    padding: 5px 5px 5px 12px;
    background-color: #FFF;
    border: 1px solid #DDD;
    border-radius: 21px;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

#profile-icon-user,
#profile-icon-hamburger {
    position: absolute;
    top: 15px
}

#profile-icon-hamburger {
    left: 8px;
}
#profile-icon-user {
    left: 35px;
    color: #E61E4D
}

.button--profile:hover {
    box-shadow: 0px 2px 4px 0.5px #DDD;
    cursor: pointer;
}

.button--create-spot {
    width: 130px;
    height: 42px;
    padding: 5px 5px 5px 12px;
    font-weight: 600;
    background-color: #FFF;
    border: 0px solid #DDD;
    border-radius: 21px;
}

.button--create-spot:hover {
    background-color: #F6F6F6;
    cursor: pointer;
}

.icon--profile {
    margin: 5px;
    height: 16px;
    width: 16px;
}

.container--profile {
    position: relative;
}

.list--profile-dropdown {
    display: flex;
    flex-direction: column;
    position: absolute;
    align-items: flex-start;
    background-color: #FFF;
    top: 38px;
    right: 0px;
    box-shadow: 2px -2px 2px 0.5px #DDD;
    border-radius: 15px;
    padding: 10px 0px;
    list-style: none;
    width: 250px;
}

.button--dropdown-item {
    border: none;
    background-color: #FFF;
    padding: 15px 185px 15px 15px;
    font-size: .8rem;
    width: 250px;
    text-align: left;
    white-space: nowrap;
}

.button--dropdown-item-user-data {
    font-style: italic;
}

.button--dropdown-item-link:hover {
    background-color: #F6F6F6;
    cursor: pointer;
}

#demo-user-button {
    background-color: #e31c5f;
    color: #FFF;
    font-weight: 600;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
}

#demo-user-button:hover {
    background-color: #D31c5f;
    color: #FFF;
    opacity: 0.9;
}

.button--modal {
    font-weight: 600;
}

#button--user-spots,
#button--user-bookings {
    font-weight: 600;
}

#session-username {
    font-weight: 600;
    color: #FF5A5F;
}

